--- a/index.html
+++ b/index.html
@@ -4,58 +4,28 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Demo Test</title>
-    <meta name="description" content="" />
+    <meta name="description" content="Demo Test by John Joaquin A. Valdez" />
     <link rel="icon" href="/favicon.svg" />
   </head>
 
-  <body>
+  <body class="min-w-96 antialiased">
     <div class="container mt-4">
       <div class="table-container">
-        <h1 class="bg-gray-300 py-3 text-center font-bold">BuyBox Statistics</h1>
+        <h1 class="table-title">BuyBox Statistics</h1>
 
-        <div class="table-wrapper">
-          <table>
-            <thead>
-              <tr>
-                <th>Name</th>
-                <th>Rating</th>
-                <th>Review</th>
-                <th>Last Won</th>
-                <th>Time Period</th>
-              </tr>
-            </thead>
+        <table>
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Rating</th>
+              <th>Review</th>
+              <th>Last Won</th>
+              <th>Time Period</th>
+            </tr>
+          </thead>
 
-            <tbody>
-              { response.data.map((item: DataTypes) => { let name = item.sellerName let percentage =
-              item.ratingPercentage + '%' let rating = item.ratingCount.toLocaleString() let lastWon
-              = moment.utc(item.lastWonUTC).format('M/D/YY HH:mm') let timePeriod =
-              moment.duration(item.winDurationSeconds, 'seconds').humanize() let timePeriodTooltip =
-              moment.utc(item.lastWonUTC).format('DD MMM YYYY HH:mm') return (
-              <tr>
-                <td>{name}</td>
-                <td>{percentage}</td>
-                <td>{rating}</td>
-                <td>{lastWon}</td>
-                <td data-time-period="{timePeriodTooltip}" title="{timePeriodTooltip}">
-                  {timePeriod}
-                </td>
-              </tr>
-              ) }) }
-            </tbody>
-          </table>
-        </div>
-
-        <div class="pagination">
-          <button class="pagination-button" type="button">Previous</button>
-
-          <div class="pagination-numbers">
-            <span>1</span>
-            <span>2</span>
-            <span>3</span>
-          </div>
-
-          <button class="pagination-button" type="button">Next</button>
-        </div>
+          <tbody></tbody>
+        </table>
       </div>
     </div>
 
